# CS-5480_Final

./: .gitignore  Progress.md  README.md  pyproject.toml  requirements.txt
data/: README.md
src/final_project/: __init__.py  baselines.py  config.py  data.py  deep_model.py  eda_report.py  evaluate.py  generate_report.py  model_3d_viz.py  predict.py  run_experiment.py  run_multi_seed.py  train.py
